--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,10 +11,7 @@ spring:
 
 server:
   port: 8090
----
-spring:
-  config:
-    activate:
-      on-profile:
-        - vorprod
-key: value
+
+springdoc:
+  api-docs:
+    enabled: false
