feat: add liquibase

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,12 +32,16 @@ spring:
     #   maximum-pool-size: 1 # disabling concurrent connections due to free plan limitations
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-    generate-ddl: true # By default, DDL statements will only be generated for embedded databases.
+    hibernate:
+      ddl-auto: validate
+  liquibase:
+    drop-first: true
+  # generate-ddl: true # By default, DDL statements will only be generated for embedded databases.
     # By default, Spring Boot will try to populate the database from data.sql on startup,
     # i.e. before JPA has the opportunity to generate DDL statements from classes annotated with @Entity.
-    defer-datasource-initialization: true
-  sql:
-    init:
-      # The default value is 'embedded', which only works for in-memory databases.
-      # Since we're using a 'non-embedded' database here, we now need to set this to 'always'.
-      mode: always
+   # defer-datasource-initialization: true
+  # sql:
+  #   init:
+  #     # The default value is 'embedded', which only works for in-memory databases.
+  #     # Since we're using a 'non-embedded' database here, we now need to set this to 'always'.
+  #     mode: always
